--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,28 +1,40 @@
 .navigation-menu {
-    text-align: center;
-  }
-  
-  .header {
-    font-family: 'Sigmar', cursive;
-    font-size: 3em;
-    margin-bottom: 20px;
-  }
-  
-  ol {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  li {
-    display: inline;
-    margin: 0 10px;
-  }
-  
-  a {
-    text-decoration: none;
-    color: black;
-  }
-  
-  a:hover {
-    text-decoration: underline;
-  }
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.nav-left .logo {
+  font-family: 'Sigmar', cursive;
+  font-size: 2em;
+  text-decoration: none;
+  color: black;
+}
+
+.nav-right ol {
+  list-style: none;
+  display: flex;
+  gap: 1.5rem;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-right li {
+  display: inline;
+}
+
+.nav-right a {
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+}
+
+.nav-right a:hover {
+  text-decoration: underline;
+}
